--- a/WpfAppAlgorithm/WpfAppAlgorithm.csproj
+++ b/WpfAppAlgorithm/WpfAppAlgorithm.csproj
@@ -101,5 +101,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="wpfAlgorithm.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
